@@ -2828,6 +2828,7 @@ static Bool __resize_window(F_CMD_ARGS)
 	long evmask;
 	FvwmWindow *fw = exc->w.fw;
 
+/* 	fprintf(stderr,"dje: fvwm entering resize window\n"); */
 	bad_window = False;
 	ResizeWindow = FW_W_FRAME(fw);
 	if (FQueryPointer(
@@ -2880,6 +2881,7 @@ static Bool __resize_window(F_CMD_ARGS)
 	{
 		rectangle new_g;
 
+/* 		fprintf(stderr,"dje: resize args equal 2\n"); */
 		/* size will be less or equal to requested */
 		new_g = fw->frame_g;
 		constrain_size(
@@ -3184,6 +3186,7 @@ static Bool __resize_window(F_CMD_ARGS)
 				/* Fake an event to force window reposition */
 				ev.type = MotionNotify;
 				ev.xmotion.time = fev_get_evtime();
+/* 				fprintf(stderr,"dje: force redraw\n"); */
 				fForceRedraw = True;
 				break;
 			}
