@@ -1,3 +1,7 @@
+2003-02-08  Dan Espen  <dane@mk.telcordia.com>
+
+	* fvwm/fvwm.1.in: Fully document the emulate command.
+
 2003-02-06  olicha  <olivier.chapuis@free.fr>
 
 	* fvwm/borders.c (get_common_decorations):
